--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@types/styled-components": "^5.1.32",
     "axios": "^1.6.2",
+    "cookie": "^0.6.0",
+    "cookies-next": "^4.1.0",
+    "date-fns": "^3.0.0-alpha.2",
+    "dayjs": "^1.11.10",
+    "iso-week": "^0.1.2",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^8.1.3",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.10.3",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
